--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,9 @@
 browser=chrome
 url=http://52.39.162.23/web/login
-username=Lunch_InvoicingManager3@info.com
-password=LD686gfX24
+managerUsername=Lunch_InvoicingManager3@info.com
+managerPassword=LD686gfX24
+userUsername=Lunch_Invoicing_User3@info.com
+userPassword=LD686gfX28
+
+
+
